--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,11 @@
   --animate-fifth: moveInCircle 20s ease infinite;
 }
 
+html,
+body {
+  background-color: #000;
+}
+
 @keyframes moveHorizontal {
   0% {
     transform: translateX(-50%) translateY(-10%);
